Revert to one Arrow example
Signed-off-by: teodordelibasic-db <teodor.delibasic@databricks.com>